Bug 1464723 - Implement custom scrollbar support for GTK widget.
When any scrollbar color is specified, or scrollbar-width is thin, we switch to use the fallback rendering.

The change to xulscrollbars.css is for ensuring that the scrollbar is displayed for scrollbar-width: thin when there is no scrollbar color specified. It wouldn't affect cases where -moz-appearance takes effect. 

This also changes the fallback width of the scrollbars. Since the two widths was picked rather randomly, I think it should be fine to change it if a value looks better than the old one, especially on Linux which is the main usecase for this fallback rendering.

--- a/toolkit/themes/windows/global/xulscrollbars.css
+++ b/toolkit/themes/windows/global/xulscrollbars.css
@@ -15,6 +15,7 @@ scrollbar {
   -moz-appearance: scrollbar-horizontal;
   -moz-binding: url("chrome://global/content/bindings/scrollbar.xml#scrollbar");
   cursor: default;
+  background-color: #f0f0f0;
 }
 
 @media all and (-moz-overlay-scrollbars) {
@@ -47,6 +48,7 @@ slider[orient="vertical"] {
 thumb {
   -moz-appearance: scrollbarthumb-vertical;
   min-height: 8px;
+  background-color: #cdcdcd;
 }
 
 thumb[orient="horizontal"] {
